# Homework2

./: CMakeLists.txt  Homework2.kdev4  dsu.cpp  dsu.h  level1.cpp  level2.cpp  level4.cpp  list.cpp  list.h  stack.cpp  stack.h  tagged_pointer.cpp  tagged_pointer.h  timer.cpp  timer.h  treap.cpp  treap.h  tree.cpp  tree.h
